--- a/index.html
+++ b/index.html
@@ -70,5 +70,9 @@
             return { data: edges, width, height };
         }
     </script>
+
+    <!-- Place external script outside of the inline script -->
+    <script src="script.js"></script>
+
 </body>
 </html>
