--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <input type="file" id="imageInput" accept="image/*">
     <canvas id="canvas" style="display: none;"></canvas>
     <button onclick="convertImageToTrack()">Convert</button>
+    <button onclick="copyToClipboard()">Copy Base64</button>
     <p id="output"></p>
 
-    <!-- Correctly link external script -->
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
